<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- code created by RetryTech / Skype : RetryTech / Mail = tejash@gmail.com -->
    <data>

        <variable
            name="model"
            type="com.bakbakum.shortvdo.utils.Dialog1" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_corner_15"
        android:backgroundTint="@color/colorPrimaryDark"
        android:gravity="center_horizontal"
        android:minWidth="270dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:minWidth="200dp"
            android:paddingHorizontal="10dp"
            android:text="@string/please_agree_our_term_amp_conditions_and_privacy_policy"
            android:textColor="@color/light_white"
            android:textSize="14sp" />


        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/image"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/tv_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingStart="0dp"
                android:paddingEnd="15dp"
                android:text="@string/term_of_use"
                android:textColor="@color/colorTheme" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginVertical="5dp"
                android:background="@color/color_text_light" />

            <TextView
                android:id="@+id/tv_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:text="@string/privacy_policy"
                android:textColor="@color/colorTheme" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_white_bottom_15"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/color_text_light" />

            <TextView
                android:id="@+id/tv_positive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/agree"
                android:textColor="@color/colorTheme" />

        </LinearLayout>


    </LinearLayout>
</layout>