<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.LoginActivity">
    <!-- code created by RetryTech / Skype : RetryTech / Mail = tejash@gmail.com -->
    <data>

        <variable
            name="onFacebookClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="onGoogleClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="onTwitterClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="onPhoneNumberClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="OnCloseClick"
            type="android.view.View.OnClickListener" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_bottom_sheet"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/image"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/popins_medium"
                android:text="@string/sign_up_for_bubble_tok"
                android:textColor="@color/light_white"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:onClick="@{onFacebookClick}"
                android:visibility="visible">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="#406AC0"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables"

                        >

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginStart="40dp"
                            android:contentDescription="@string/image"
                            android:src="@drawable/ic_fb_logo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="1dp"
                            android:fontFamily="@font/popins_medium"
                            android:text="@string/with_facebook"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="15dp" />

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:onClick="@{onGoogleClick}">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="#529EFE"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginStart="40dp"
                            android:contentDescription="@string/image"
                            android:src="@drawable/ic_google" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="1dp"
                            android:fontFamily="@font/popins_medium"
                            android:text="@string/with_google"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </RelativeLayout>


            <!--<View
                android:layout_width="0dp"
                android:layout_height="15dp" />

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:onClick="@{onTwitterClick}">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="#529EFE"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginStart="40dp"
                            android:contentDescription="@string/image"
                            android:src="@drawable/ic_twitter" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="1dp"
                            android:fontFamily="@font/popins_medium"
                            android:text="@string/with_twitter"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </RelativeLayout>-->

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/popins_reguler"
                android:gravity="center"
                android:padding="30dp"
                android:text="@string/continue_privacy_policy"
                android:textColor="@color/color_text_light"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:onClick="@{OnCloseClick}"
            android:padding="2dp"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/image"
            android:tint="@color/color_text_light" />

    </RelativeLayout>
</layout>