<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.bakbakum.shortvdo.viewmodel.PreviewViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <RelativeLayout
            android:id="@+id/lout_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_comment_count"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center"
                android:text="Upload video"
                android:textColor="@color/light_white" />

            <ImageView
                android:id="@+id/img_close"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="20dp"
                android:src="@drawable/ic_close"
                android:tint="@color/light_white" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/lout_head"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"

                >

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="5dp"
                    app:cardUseCompatPadding="true">

                    <ImageView
                        android:id="@+id/iv_thumb"
                        android:layout_width="105dp"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/logo" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/popins_reguler"
                        android:text="Short Description"
                        android:textColor="@color/light_white"

                        />

                    <com.bakbakum.shortvdo.customview.socialView.SocialEditText
                        android:id="@+id/edt_des"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:afterTextChanged="@{(editable)->viewModel.onDescriptionTextChanged(editable)}"
                        android:background="@drawable/bg_white_corner_15"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:elevation="5dp"
                        android:fontFamily="@font/popins_reguler"
                        android:gravity="top"
                        android:hint="Awesome caption.."
                        android:maxLength="175"
                        android:padding="10dp"
                        android:textColor="@color/light_white"
                        android:textColorHint="@color/color_text_light"
                        android:textCursorDrawable="@xml/cursor"
                        android:textSize="12dp"
                        app:socialFlags="hashtag" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="3dp"
                android:gravity="end"
                android:text='@{viewModel.position+"/175"}'
                android:textColor="@color/color_text_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="264dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/allowComments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/allowCommentsSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true" />

                    <View
                        android:layout_width="10dp"
                        android:layout_height="0dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Allow comments"
                        android:textSize="12sp" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:id="@+id/allowDuet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/allowDuetSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true" />

                    <View
                        android:layout_width="10dp"
                        android:layout_height="0dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Allow duet"
                        android:textSize="12sp" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:id="@+id/savePhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/savePhoneSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true" />

                    <View
                        android:layout_width="10dp"
                        android:layout_height="0dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Save video locally"
                        android:textSize="12sp" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Privacy Setup"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/privacy_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:checkedButton="@+id/radioButton"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/radioButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Public" />

                        <RadioButton
                            android:id="@+id/radioButton2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Friends" />

                        <RadioButton
                            android:id="@+id/radioButton3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Only Me" />

                    </RadioGroup>
                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/btn_publish"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_gradient"
                android:fontFamily="@font/popins_medium"
                android:letterSpacing="0.1"
                android:text="@string/publish"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/popins_reguler"
                android:gravity="center"
                android:text="@string/by_continuing_you_agree_to_bubbletok_s_terms_of_use_nand_confirm_that_you_have_read_our_privacy_polic"
                android:textColor="@color/color_text_light"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/popins_reguler"
                android:gravity="center"
                android:paddingHorizontal="25dp"
                android:text="@string/policy_center"
                android:textColor="@color/colorTheme"
                android:textSize="12sp" />


        </LinearLayout>

    </RelativeLayout>
</layout>